# csr-llm

./: .gitignore  CONTRIBUTING.md  CSR-LLM-pilot-spec.md  FINDINGS.md  README.md  REPRODUCE.md  pyproject.toml
configs/: code_selfplay.yaml  curriculum_test.yaml  main.yaml  pilot.yaml  signal_test.yaml
src/csr_llm/: __init__.py  __main__.py  analyze.py  code_task.py  config.py  evaluate.py  generate.py  lora.py  model.py  pretrain.py  run_code_selfplay.py  run_curriculum_test.py  run_experiment.py  run_pilot.py  run_round.py  run_signal_test.py  selection.py  task.py  tokenizer.py  train_offspring.py
tests/: test_config.py  test_integration.py  test_model.py  test_selection.py  test_task.py
